--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+/*********
+header
+**********/
+.header {
+  display: flex;
+  justify-content: space-around;
+}
+
+.delphine img {
+  border-radius: 100%;
+}
+
+/*******/
 .App {
   text-align: center;
 }
@@ -32,6 +45,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
