--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,22 @@ h2 {
   width: 50px;
 }
 
+.buttoncv {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #23a5ea;
+  color: white;
+  border: 0;
+  border-radius: 5px;
+  font-size: 16px;
+  margin: 10px;
+  text-decoration: none;
+}
+
+.buttoncv:hover {
+  color: white;
+}
+
 
 /*******/
 .App {
