--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+/* body {
+  background-color: rgb(182, 165, 165);
+  color: white;
+} */
+
 /*********
 header
 **********/
@@ -13,7 +18,7 @@ header
 /*********
 main
 **********/
-.main {
+.backgroundColor {
   background-color: rgb(182, 165, 165);
   color: white;
 }
@@ -91,6 +96,55 @@ h2 {
 .buttoncv:hover {
   color: white;
 }
+
+/*********
+contact
+**************/
+.contact {
+  max-width: 500px;
+  margin: 0 auto;
+
+}
+
+.contact_form {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+
+}
+
+.contact_form textarea {
+  margin: 10px;
+  padding: 30px;
+  background-color: rgb(182, 165, 165);
+  color: white;
+}
+
+.contact_form button {
+  font-size: 1.2rem;
+}
+
+input {
+  border: none;
+  padding: 10px;
+  border-bottom: 1px solid black;
+  background-color: rgb(182, 165, 165);
+}
+
+input::placeholder {
+  color: white;
+}
+
+textarea::placeholder {
+  color: white;
+}
+
+
+.contacth1 {
+  padding-top: 150px;
+}
+
+
 
 
 /*******/
