--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-/* body {
-  background-color: rgb(182, 165, 165);
-  color: white;
-} */
-
 /*********
 header
 **********/
@@ -11,8 +6,8 @@ header
   justify-content: space-around;
 }
 
-.delphine img {
-  border-radius: 100%;
+.delphine {
+  border-radius: 50%;
 }
 
 /*********
@@ -44,13 +39,34 @@ h2 {
 /*********
           realisation
 ***************/
+.img-wrapper {
+  height: 20rem;
+  max-width: 100%;
+  overflow: hidden;
+  outline: 0;
+  line-height: 0;
+
+}
+
+.img-wrapper img {
+  min-height: 100%;
+  object-fit: cover;
+  box-shadow: 2px 2px 5px 5px white;
+  border: 1px solid white;
+}
+
+
+
+
+
 .article {
-  border-radius: 20px;
+  /* border-radius: 20px; */
   padding-bottom: 50px;
-  justify-content: center;
-  margin-left: 50px;
+  /* justify-content: center; */
+  /* margin-left: 50px; */
   margin-right: 50px;
   margin-bottom: 50px;
+
 }
 
 
@@ -59,11 +75,11 @@ h2 {
 
 } */
 
-.image img {
+/* .image img {
   box-shadow: 2px 2px 5px 5px white;
   border: 1px solid white;
   width: 90%;
-}
+} */
 
 
 .fleche img {
